# hn-rerank-v2

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Caddyfile  ROADMAP.md  WORKLOG.md  ch_client.py  config.toml  database.py  dedup.py  eval.py  eval_no_hn_features.json  eval_no_hn_features.py  eval_ranker_cluster_feature_sweep.json  eval_ranker_down_up_interaction_sweep.json  eval_ranker_full_window.json  eval_ranker_ideas_3_4_5_8.json  eval_ranker_later_3_4_5_8.json  eval_ranker_logreg_c_0.01.json  eval_ranker_logreg_c_0.03.json  eval_ranker_logreg_c_0.05.json  eval_ranker_logreg_c_0.1.json  eval_ranker_logreg_c_0.2.json  eval_ranker_logreg_c_0.4.json  eval_ranker_logreg_c_0.8.json  eval_ranker_logreg_c_1.5.json  eval_ranker_logreg_c_10.0.json  eval_ranker_logreg_c_3.0.json  eval_ranker_mlp_variants.json  eval_ranker_pos_cluster_feature.json  eval_ranker_recency_variants.json  eval_ranker_simple_models.json  eval_ranker_textsplit_variants.json  eval_ranker_variants.json  eval_ranker_variants_c0.1_g0.08.json  eval_ranker_variants_c0.3_g0.08.json  eval_report.json  eval_report_rss.json  eval_rss.py  fable_plan.md  (+14 more)
notes/: cap-sweep-2026-06-29.md  improvement-brainstorm-2026-07-15.md
pipeline/: __init__.py  config.py  enrichment.py  hn_dupes.py  ranking.py  render.py
plans/: algolia-to-clickhouse.md  code-review-invariants-and-tests.md  recommender-features-research.md
prompts/: article_only_v4.txt  article_v4.txt  combined_v4.txt  discussion_only_v4.txt  discussion_v4.txt
scripts/: _seed_common.py  backfill_lesswrong_score.py  backfill_reddit_metadata.py  cap_sweep.py  (+25 more)
(+36 files in other folders)
