[project]
name = "hn-rewrite"
version = "0.1.0"
description = "Minimalist HN reranking dashboard"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "beautifulsoup4>=4.14",
    "trafilatura>=1.6",
    "numpy<2.4",
    "onnxruntime>=1.23",
    "transformers>=4.57",
    "scikit-learn>=1.8",
    "jinja2>=3.1",
    "feedparser>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "hypothesis>=6.150",
    "ruff>=0.14",
    "ty>=0.0.10",
]
dl-experiment = [
    "torch>=2.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
markers = ["slow: slow tests (~60s); run with `pytest -m slow`"]
addopts = "-m 'not slow'"
